[package]
name = "fullypeek"
version = "0.1.0"
edition = "2021"
authors = ["Clint Valentine <valentine.clint@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/clintval/fullypeek"
description = "Peek forward in an iterator as far as you'd like, memory allowing!"
documentation = "https://github.com/clintval/fullypeek/README.md"
categories = ["rust-patterns"]
keywords = ["iterator", "peek", "peekable"]
exclude = [".github/workflows/*", ".gitignore"]